30 November 2020: Wouter
	- Fix assertion failure on double callback when iterator loses
	  interest in query at head of line that then has the tcp stream
	  not kept for reuse.
	- tag for the 1.13.0rc4 release.

27 November 2020: Wouter
	- Fix compile warning for type cast in http2_submit_dns_response.
	- Fix when use free buffer to initialize rbtree for stream reuse.
	- Fix compile warnings for windows.
	- Fix compile warnings in rpz initialization.
	- Fix contrib/metrics.awk for FreeBSD awk compatibility.
	- tag for the 1.13.0rc3 release.

26 November 2020: Wouter
	- Fix to omit UDP receive errors from log, if verbosity low.
	  These happen because of udp-connect.
	- For #352: contrib/metrics.awk for Prometheus style metrics output.
	- Fix that after failed read, the readagain cannot activate.
	- Clear readagain upon decommission of pending tcp structure.

25 November 2020: Wouter
	- with udp-connect ignore connection refused with UDP timeouts.
	- Fix udp-connect on FreeBSD, do send calls on connected UDP socket.
	- Better fix for reuse tree comparison for is-tls sockets.  Where
	  the tree key identity is preserved after cleanup of the TLS state.
	- Remove debug commands from reuse tests.
	- Fix memory leak for edns client tag opcode config element.
	- Attempt fix for libevent state in tcp reuse cases after a packet
	  is written.
	- Fix readagain and writeagain callback functions for comm point
	  cleanup.
	- tag for the 1.13.0rc2 release.

24 November 2020: Wouter
	- Merge PR #283 : Stream reuse.  This implements upstream stream
	  reuse for performing several queries over the same TCP or TLS
	  channel.
	- set version of main branch to 1.13.0 for upcoming release.
	- iana portlist updated.
	- Fix one port unit test for udp-connect.
	- tag for the 1.13.0rc1 release.
	- Fix crash when TLS connection is closed prematurely, when
	  reuse tree comparison is not properly identical to insertion.
	- Fix padding of struct regional for 32bit systems.
